@@ -90,7 +90,14 @@ including platform specific packages of Window Maker.
 
 * ChangeLog: what changed from the previous version?
 
+
 * BUGS: list of known bugs
+
+*** Tutorial
+
+There's a tutorial maintained by Georges Tarbouriech at:
+
+http://www.linuxfocus.org/~georges.t/
 
 
 *** User Guide
