@@ -1,6 +1,8 @@
 Changes since version 0.63.0:
 .............................
 - fixed compile prob with SGI compiler
+- decreased nice() value in wmsetbg
+- applied gnome panel not-covering patch from (Bastien Nocera <hadess@hadess.net>)
 
 Changes since version 0.62.1:
 .............................
